# tic-tac-toe

./: LICENSE  README.md  pyproject.toml  requirements.txt  tic-tac-toe.py
src/tic_tac_toe/: __init__.py  board.py  chatgpt_tictactoe.py  main.py  tic_tac_toe.py  tic_tac_toe_cli.py  tic_tac_toe_ui.py
tests/: test_board.py  test_tic_tac_toe.py  test_tic_tac_toe_cli.py
