[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tic_tac_toe"
version = "1.0.0"
readme = "README.md"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=tic_tac_toe",
    "--cov-report=xml",
    "--cov-report=term"
]

[tool.mypy]
strict = true
mypy_path = "src/tic_tac_toe"
